tweaks and fixes on home page

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -74,8 +74,9 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
           </div>
         </div>
       </div>
-      <div class="flex items-center justify-center mt-8 mb-8">
-        <Button text="See My Full Resume" type="tertiary" />
+      <div class="flex items-center justify-center mt-8 mb-8 gap-4">
+        <Button text="Full Resume" type="tertiary" />
+        <Button text="LinkedIn" type="secondary" />
       </div>
     </div>
   </div>
