--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,12 @@ const today = new Date();
 
 <footer>
   <div class="bg-purple w-full h-full py-24 items-center flex flex-col">
-    <div>
+    <div class="flex flex-row gap-20 mb-8 font-bold text-xl">
+      <a href="/contact">Portfolio</a>
+      <a href="/contact">Blog</a>
+      <a href="/contact">Contact</a>
+    </div>
+    <div class="mb-4">
       <p>&copy; {today.getFullYear()} Thomas Faddegon. All rights reserved.</p>
     </div>
 
