--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,7 +14,7 @@ import Icons from "./Icons.astro";
         >
           <div class="flex items-center gap-4 max-h-[10px]">
             <HeaderLink href="/">Home</HeaderLink>
-            <HeaderLink href="/portfolio">Portfolio</HeaderLink>
+            <HeaderLink href="#portfolio">Portfolio</HeaderLink>
             <HeaderLink href="/blog">Blog</HeaderLink>
             <HeaderLink href="/about">Contact</HeaderLink>
           </div>
