--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -17,7 +17,7 @@ const optimizedBackground = await getImage({
   class="gradient-background min-h-96"
 >
   <div class="container container-large">
-    <div class="padding-global py-32">
+    <div class="padding-global py-32" id="portfolio">
       <h2 class="text-center mb-20">Recent Work</h2>
       <div class="flex flex-col gap-12">
         <Project
