added contact form and functionality

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const today = new Date();
 
 <footer>
   <div class="bg-purple w-full h-full py-24 items-center flex flex-col">
-    <div class="flex flex-row gap-20 mb-8 font-bold text-xl">
+    <div class="flex flex-row gap-20 mb-8 font-bold text-lg">
       <a href="/contact">Portfolio</a>
       <a href="/contact">Blog</a>
       <a href="/contact">Contact</a>
