--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -13,7 +13,7 @@ import Button from "./Button.astro";
       <div class="padding-extra">
         <div>
           <h2 class="text-center mb-1">Don't just take it from me.</h2>
-          <h4 class="text-center mb-10">
+          <h4 class="text-center text-lg mb-10">
             Here's what my clients have had to say.
           </h4>
           <div
