--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,20 +70,34 @@ main {
 
 /* text and header stylings */
 h1 {
-  font-family: "Manrope", sans-serif;
-  font-size: 3.3rem;
-  line-height: 3.8rem;
+  font-size: 1.875rem /* 30px */;
+  line-height: 3rem /* 36px */;
 }
+
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 3rem;
+    line-height: 3.25rem;
+  }
+}
+
 h2 {
   font-size: 2.5rem;
   line-height: 3rem;
 }
+
 h3 {
   font-family: "IBM Plex Mono", monospace;
   font-weight: 400;
   font-size: 1.4rem;
   line-height: 1.75rem;
   text-transform: uppercase;
+}
+
+h4 {
+  font-size: 1.8rem;
+  line-height: 1.5rem;
+  @apply text-purple;
 }
 
 h5 {
