--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const optimizedBackground = await getImage({
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body>
-    <main>
+    <main class="min-h-screen">
       <!-- Hero Section -->
       <div
         style={`background-image: url('${optimizedBackground.src}'); background-size: cover; background-repeat: no-repeat;`}
