finalized contact form, removed client-side validators and replaced with html attribute validation

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,7 +1,7 @@
 ---
 const { text, type = "primary" } = Astro.props as {
   text: string;
-  link: string;
+  link?: string;
   type?: ButtonType;
 };
 
