refactored nav to make it fixed on scroll

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -17,31 +17,31 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
         <h2 class="mb-12 padding-extra">Work Experience</h2>
         <div class="flex flex-col lg:flex-row gap-24 mb-16 padding-extra">
           <Position
-            title="title"
-            location="location"
-            years="year - year"
-            description="In the digital landscape, clean, scalable, and robust code is the cornerstone for any successful product. But even though code lays an essential foundation, success is equally determined by how a product makes its users feel. Does it anticpate user needs? Does it make a user feel valued and understood?"
+            title="Front-End Developer & UX/UI Specialist"
+            location="The Luminary Agency"
+            years="2020 - Present"
+            description="Developed responsive web interfaces using WordPress, Webflow, Squarespace, and HTML/CSS/JavaScript. Created UI wireframe designs with Figma, Relume, and Balsamiq, improving user experience and navigability. Collaborated on brand aesthetics with the design team, ensuring cohesive visual strategies across platforms. Achievements include 1,000% traffic increase, 150% higher conversion rates, and 15% lower bounce rates."
           />
           <Position
-            title="title"
-            location="location"
-            years="year - year"
-            description="In the digital landscape, clean, scalable, and robust code is the cornerstone for any successful product. But even though code lays an essential foundation, success is equally determined by how a product makes its users feel. Does it anticpate user needs? Does it make a user feel valued and understood?"
+            title="Front-End Developer & Product Strategist"
+            location="Higher Self Yoga"
+            years="2020 - year"
+            description="Designed and implemented a product and marketing strategy that grew user traffic from 1,000 to 25,000 monthly and expanded our email list from 2,000 to 16,000. Led a team in migrating from WordPress to Webflow to enhance design and functionality, which increased site speed by 50%, reduced bounce rates by 5%, and increased conversions by 25%. Developed a new community platform with optimized user flow and onboarding, integrating features like personalized dashboards, a tagged forum, and real-time messaging."
           />
         </div>
         <div class="track py-16">
           <div class="flex flex-col lg:flex-row gap-24 padding-extra">
             <Position
-              title="title"
-              location="location"
-              years="year - year"
-              description="In the digital landscape, clean, scalable, and robust code is the cornerstone for any successful product. But even though code lays an essential foundation, success is equally determined by how a product makes its users feel. Does it anticpate user needs? Does it make a user feel valued and understood?"
+              title="Director of Digital Marketing"
+              location="Cruiseline.com"
+              years="2018 - 2020"
+              description="Led a team in a comprehensive marketing and sales campaign, leveraging display, PPC, email, and SEO, increasing conversions by 30%. Proposed UX/UI enhancements using A/B testing, user recordings, and heatmaps to boost conversions. Guided engineering in aligning product prototypes with optimal UX design principles and business objectives. Conducted in-depth market and sales trend analysis over six years, positioning the company as an industry leader."
             />
             <Position
-              title="title"
-              location="location"
-              years="year - year"
-              description="In the digital landscape, clean, scalable, and robust code is the cornerstone for any successful product. But even though code lays an essential foundation, success is equally determined by how a product makes its users feel. Does it anticpate user needs? Does it make a user feel valued and understood?"
+              title="Inbound Marketing & UX Specialist"
+              location="Cruiseline.com"
+              years="2015 - 2018"
+              description="Crafted a robust content and email strategy, enhancing site and email presence through rebranding, SEO, and compelling editorial pieces which lead to a 900% increase in site traffic. Managed weekly analytics, leveraging insights to optimize content and marketing strategies. Collaborated with engineers to create a display ad network, generating $470K annually. Performed usability testing on new products, writing detailed feedback and bug reports for the dev team to optimize new features before launch."
             />
           </div>
         </div>
@@ -53,22 +53,22 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
           <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-10">
             <Certification
               title="Software Engineer"
-              text="Over 1,000 hours of coding experience in new and legacy full-stack technologies, computer science foundations, and collaborations using agile methodologies."
+              text="1,000+ hours of coding experience in new and legacy full-stack technologies, computer science foundations, and agile methodologies."
               image={hackReactorIcon}
             />
             <Certification
-              title="Python Data Analyst"
-              text="Over 1,000 hours of coding experience in new and legacy full-stack technologies, computer science foundations, and collaborations using agile methodologies."
-              image={dataCampIcon}
-            />
-            <Certification
-              title="Javascript Engineer"
-              text="Over 1,000 hours of coding experience in new and legacy full-stack technologies, computer science foundations, and collaborations using agile methodologies."
+              title="Javascript Developer"
+              text="Passed certifications for Javascript, React, and Node.js, demonstrating proficiency in core concepts and frameworks."
               image={hackerRankIcon}
             />
             <Certification
+              title="Python Data Analyst"
+              text="Achieved profieciency in Python and libraries like NumPy, Pandas, and Matplotlib, as well as foundations in statistics and exploratory data analysis."
+              image={dataCampIcon}
+            />
+            <Certification
               title="BA & MA in English"
-              text="Over 1,000 hours of coding experience in new and legacy full-stack technologies, computer science foundations, and collaborations using agile methodologies."
+              text="Received a Master's Degree in English Literature and a BA in English with minors in Philosophy, Political Science, and Religious Studies."
               image={newPaltzIcon}
             />
           </div>
