--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -13,7 +13,7 @@ const optimizedBackground = await getImage({
   class="gradient-background min-h-96"
 > -->
 <div
-  style={`background-image: url('src/images/backgrounds/gradient-2000.png'); background-size: cover; background-repeat: no-repeat;`}
+  style={`background-image: url('src/images/backgrounds/gradient-2000.png'); background-size: cover; background-repeat: no-repeat; background-position: bottom left;`}
   class="gradient-background min-h-96"
 >
   <div class="container container-large">
