--- a/src/components/H3.astro
+++ b/src/components/H3.astro
@@ -1,8 +1,9 @@
 ---
-const { centered, header, maxWidth } = Astro.props as {
+const { centered, header, maxWidth, classes } = Astro.props as {
   header: string;
   centered?: boolean;
   maxWidth?: string;
+  classes?: string;
 };
 
 const center = centered ? "text-center" : "";
@@ -13,7 +14,7 @@ const center = centered ? "text-center" : "";
     <div>&lt;</div>
   </div>
   <div class={`max-w-[${maxWidth}rem] px-2`}>
-    <h3 class={center}>{header}</h3>
+    <h3 class={`${center} ${classes}`}>{header}</h3>
   </div>
   <div class="text-purple text-2xl mt-[-2px] flex flex-col justify-center">
     <div>&gt;</div>
