--- a/src/components/Position.astro
+++ b/src/components/Position.astro
@@ -13,8 +13,8 @@ const { title, location, years, description } = Astro.props as Props;
 
 <div class="w-full lg:w-1/2">
   <div class="flex flex-col gap-1">
-    <div class="mb-2">
-      <H3 header={title} />
+    <div class="">
+      <H3 header={title} classes="text-lg font-bold" />
     </div>
     <div><span class="font-bold">{location}</span></div>
     <div><span class="text-purple">{years}</span></div>
