--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,11 +16,10 @@ import H3 from "../components//H3.astro";
   <body class="h-full">
     <main class="flex flex-col min-h-screen">
       <!-- Hero Section -->
-      <div class="container container-large">
-        <div class="padding-global">
-          <Nav title={SITE_TITLE} />
-        </div>
-      </div>
+
+      <Nav title={SITE_TITLE} />
+      <div class="h-12"></div>
+
       <section class="flex-grow">
         <div class="container container-large">
           <div class="padding-global">
